--- a/principal/templates/profile_edit.html
+++ b/principal/templates/profile_edit.html
@@ -16,46 +16,36 @@
                                     <div class="text-center ">
                                         <img src="/{{ photo_profile }}" alt="" class="center-block img-circle img-thumbnail img-responsive" width="211">
                                     </div>
-                                    <label for="id_{{ form.visible_fields.3.html_name }}" class="control-label"></label>
+                                    <label for="id_photo" class="control-label"></label>
                                     <div>
                                         {{ form.visible_fields.4 }} <label for="id_photo_clear">Default image</label>
                                         {{ form.visible_fields.3 }}
                                     </div>
-                                    <div class="help-block with-errors">
-                                        {{ form.visible_fields.3.errors }}
-                                    </div>
+                                    <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <!-- edit form column -->
                             <div class="col-md-5 col-sm-6 col-xs-8 personal-info">
                                     <div class="form-group {% if form.visible_fields.0.errors %} has-error {% endif %} ">
-                                        <label for="id_{{ form.visible_fields.0.html_name }}" class="control-label">First name:</label>
+                                        <label for="id_first_name" class="control-label">First name:</label>
                                         {{ form.visible_fields.0 }}
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.0.errors }}
-                                        </div>
+                                        <div class="help-block with-errors"></div>
                                     </div>
-                                    <div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
-                                        <label for="id_{{ form.visible_fields.1.html_name }}" class="control-label">Last name:</label>
+                                    <div class="form-group">
+                                        <label for="id_last_name" class="control-label">Last name:</label>
                                         {{ form.visible_fields.1 }}
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.1.errors }}
-                                        </div>
+                                        <div class="help-block with-errors"></div>
                                     </div>
-                                    <div class="form-group {% if form.visible_fields.2.errors %} has-error {% endif %}">
-                                        <label for="id_{{ form.visible_fields.2.html_name }}" class="control-label">Genre:</label>
+                                    <div class="form-group">
+                                        <label for="id_genre" class="control-label">Genre:</label>
                                         {{ form.visible_fields.2 }}
-                                        <div class="help-block with-errors">
-                                            {{ form.visible_fields.2.errors }}
-                                        </div>
+                                        <div class="help-block with-errors"></div>
                                     </div>
-                                    {% for hidden in form.hidden_fields %}
-                                        {{ hidden }}
-                                    {% endfor %}
+                                    {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
                                     <div class="form-group">
                                         <input class="btn btn-primary" value="Save Changes" type="submit">
                                         <span></span>
-                                        <a href="/profile/{% if form.initial|length != 0 %}{{ form.initial.id }}{% else %}{{ form.data.id }}{% endif %}" class="btn btn-default">Cancel</a>
+                                        <a href="/profile/{{ form.id.value }}" class="btn btn-default">Cancel</a>
                                     </div>
                             </div>
                         </form>
