--- a/principal/templates/profile_edit_password.html
+++ b/principal/templates/profile_edit_password.html
@@ -15,34 +15,26 @@
                     <div class="col-md-7 col-sm-6 col-xs-8 personal-info">
                         <form class="form-horizontal" role="form" action="/profile/edit/password/" method="post" data-toggle="validator">
                             {% csrf_token %}
-                            <div class="form-group {% if form.visible_fields.0.errors %} has-error {% endif %} ">
-                                <label for="id_{{ form.visible_fields.0.html_name }}" class="control-label"><strong>Old password:</strong></label>
+                            <div class="form-group">
+                                <label for="id_old_password" class="control-label">Old password:</label>
                                 {{ form.visible_fields.0 }}
-                                <div class="help-block with-errors">
-                                    {{ form.visible_fields.0.errors }}
-                                </div>
+                                <div class="help-block with-errors"></div>
                             </div>
-                            <div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
-                                <label for="id_{{ form.visible_fields.1.html_name }}" class="control-label"><strong>New password:</strong></label>
+                            <div class="form-group">
+                                <label for="id_password" class="control-label">New password:</label>
                                 {{ form.visible_fields.1 }}
-                                <div class="help-block with-errors">
-                                    {{ form.visible_fields.1.errors }}
-                                </div>
+                                <div class="help-block with-errors"></div>
                             </div>
-                            <div class="form-group {% if form.visible_fields.2.errors %} has-error {% endif %} ">
-                                <label for="id_{{ form.visible_fields.2.html_name }}" class="control-label"><strong>Repeat new password:</strong></label>
+                            <div class="form-group">
+                                <label for="id_password_repeat" class="control-label">Repeat new password:</label>
                                 {{ form.visible_fields.2 }}
-                                <div class="help-block with-errors">
-                                    {{ form.visible_fields.2.errors }}
-                                </div>
+                                <div class="help-block with-errors"></div>
                             </div>
-                            {% for hidden in form.hidden_fields %}
-                                {{ hidden }}
-                            {% endfor %}
+                            {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
                             <div class="form-group">
                                 <input class="btn btn-primary" value="Save Changes" type="submit">
                                 <span></span>
-                                <a href="/profile/{{ user.id }}" class="btn btn-default">Cancel</a>
+                                <a href="/profile/{{ form.id.value }}" class="btn btn-default">Cancel</a>
                             </div>
                             <div class="alert alert-warning alert-dismissible form-group" role="alert">
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
