--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -14,11 +14,13 @@
     <link rel="stylesheet" href="{% static "css/font-awesome.min.css" %}">
     <link rel="stylesheet" href="{% static "css/home/morphext.css" %}">
     <link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
+    <link rel='stylesheet' href="https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.css" />
     <!-- Jquery -->
     <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
     <!-- Boostrap -->
     <script src="{% static "js/bootstrap.min.js" %}"></script>
     <!-- Dependencies JS -->
+    <script src="https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.js"></script>
     <script src="{% static "js/sweet-alert.min.js" %}"></script>
     <script src="{% static "js/countUp.min.js" %}"></script>
     <script src="{% static "js/main.js" %}"></script>
