--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -1,92 +1,134 @@
 {% extends 'base.html' %} {% block title %} My trips {% endblock %} 
 {% block content %} {% load i18n %} {% load staticfiles %}
-
-<!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner" role="listbox">
-	        {% for day in trip.day_set.all %}
-	            {% for venue in day.venues.all %}
-	                <div class="item {% if forloop.first %}active{% endif %}">
-		                <img alt="{{venue.name}}" src="{{venue.photo}}" class="img-venue-carousel"/>
-		                <div class="carousel-caption">
-		                   <h4>{{venue.name}}</h4>
-		                </div>
-	                </div>
+<div class="container">
+    <!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+                {% for day in trip.day_set.all %}
+                    {% for venue in day.venues.all %}
+                        <div class="item {% if forloop.first %}active{% endif %}">
+                            <img alt="{{venue.name}}" src="{{venue.photo}}" class="img-venue-carousel"/>
+                            <div class="carousel-caption">
+                               <h4>{{venue.name}}</h4>
+                            </div>
+                        </div>
+                    {% endfor %}
                 {% endfor %}
-            {% endfor %}
-	    </div>
-	
-	  Controls
-	  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-	    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-	    <span class="sr-only">Previous</span>
-	  </a>
-	  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-	    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-	    <span class="sr-only">Next</span>
-	  </a>
-	</div>
-     -->
-<h1>Trip details</h1>
-<h2>{{trip.day_set.count}} days in {{trip.city}}, {{trip.country}}</h2>
-<p>Click on the day indicator to show te corresponding plan</p>
+            </div>
 
-<div class="panel-group" id="accordion" role="tablist"
-	aria-multiselectable="true">
-	{% for day in trip.day_set.all %}
-	<div
-		class="panel panel-{% cycle 'primary' 'success' 'info' 'warning' 'danger' %}">
-		<div class="panel-heading" role="tab" id="heading{{day.numberDay}}">
-			<h4 class="panel-title">
-				<a data-toggle="collapse" data-parent="#accordion"
-					href="#collapse{{day.numberDay}}" aria-expanded="true"
-					aria-controls="collapse{{day.numberDay}}">Day {{day.numberDay}}</a>
-			</h4>
-		</div>
-		<div id="collapse{{day.numberDay}}"
-			class="panel-collapse collapse {% if forloop.first %}in{% endif %}"
-			role="tabpanel" aria-labelledby="headin{{day.numberDay}}">
-			<div class="panel-body">
-				<h3>
-					<i class="fa fa-map-marker"></i> Those are the venues that we
-					suggest to visit on day {{day.numberDay}}
-				</h3>
-				<div class="row text-center">
-					{% for venue in day.venues.all %} {% if not venue.is_food%}
-					<div class="col-sm-4 col-xs-6 col-md-4 col-lg-3 clearfix">
-						<img src="{{venue.photo}}"
-							class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
-						<h4>{{venue.name}}</h4>
-					</div>
-					{% if forloop.counter|divisibleby:2 %}
-					<div class="clearfix visible-xs-block"></div>
-					{% elif forloop.counter|divisibleby:3 %}
-					<div class="clearfix visible-sm-block"></div>
-					{% endif %} {% endif %} {% endfor %}
-				</div>
+          Controls
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+         -->
+    <h1>Trip details</h1>
+    <div class="row">
+        <div id="map" style="height: 500px;"></div>
+    </div>
+    <h2>{{trip.day_set.count}} days in {{trip.city}}, {{trip.country}}</h2>
+    <p>Click on the day indicator to show te corresponding plan</p>
 
-				<h3>
-					<i class="fa fa-cutlery"></i> Those are the places where we suggest
-					you to eat on day {{day.numberDay}}
-				</h3>
-				<div class="row text-center">
-					{% for venue in day.venues.all %} {% if venue.is_food%}
-					<div class="col-sm-4 col-xs-6 col-md-4 col-lg-3 clearfix">
-						<img src="{{venue.photo}}"
-							class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
-						<h4>{{venue.name}}</h4>
-					</div>
-					{% if forloop.counter|divisibleby:2 %}
-					<div class="clearfix visible-xs-block"></div>
-					{% elif forloop.counter|divisibleby:3 %}
-					<div class="clearfix visible-sm-block"></div>
-					{% elif forloop.counter|divisibleby:4 %}
-					<div class="clearfix visible-md-block"></div>
-					{% endif %} {% endif %} {% endfor %}
-				</div>
-			</div>
-		</div>
-	</div>
-	{% endfor %}
+    <div class="panel-group" id="accordion" role="tablist"
+        aria-multiselectable="true">
+        {% for day in trip.day_set.all %}
+        <div
+            class="panel panel-{% cycle 'primary' 'success' 'info' 'warning' 'danger' %}">
+            <div class="panel-heading" role="tab" id="heading{{day.numberDay}}">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion"
+                        href="#collapse{{day.numberDay}}" aria-expanded="true"
+                        aria-controls="collapse{{day.numberDay}}">Day {{day.numberDay}}</a>
+                </h4>
+            </div>
+            <div id="collapse{{day.numberDay}}"
+                class="panel-collapse collapse {% if forloop.first %}in{% endif %}"
+                role="tabpanel" aria-labelledby="headin{{day.numberDay}}">
+                <div class="panel-body">
+                    <h3>
+                        <i class="fa fa-map-marker"></i> Those are the venues that we
+                        suggest to visit on day {{day.numberDay}}
+                    </h3>
+                    <div class="row text-center">
+                        {% for venue in day.venues.all %} {% if not venue.is_food%}
+                        <div class="col-sm-4 col-xs-6 col-md-4 col-lg-3 clearfix">
+                            <img src="{{venue.photo}}"
+                                class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
+                            <h4>{{venue.name}}</h4>
+                        </div>
+                        {% if forloop.counter|divisibleby:2 %}
+                        <div class="clearfix visible-xs-block"></div>
+                        {% elif forloop.counter|divisibleby:3 %}
+                        <div class="clearfix visible-sm-block"></div>
+                        {% endif %} {% endif %} {% endfor %}
+                    </div>
+
+                    <h3>
+                        <i class="fa fa-cutlery"></i> Those are the places where we suggest
+                        you to eat on day {{day.numberDay}}
+                    </h3>
+                    <div class="row text-center">
+                        {% for venue in day.venues.all %} {% if venue.is_food%}
+                        <div class="col-sm-4 col-xs-6 col-md-4 col-lg-3 clearfix">
+                            <img src="{{venue.photo}}"
+                                class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
+                            <h4>{{venue.name}}</h4>
+                        </div>
+                        {% if forloop.counter|divisibleby:2 %}
+                        <div class="clearfix visible-xs-block"></div>
+                        {% elif forloop.counter|divisibleby:3 %}
+                        <div class="clearfix visible-sm-block"></div>
+                        {% elif forloop.counter|divisibleby:4 %}
+                        <div class="clearfix visible-md-block"></div>
+                        {% endif %} {% endif %} {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 </div>
-
+    <script>
+        L.mapbox.accessToken = 'pk.eyJ1IjoiYnJhaW50cmF2ZWwiLCJhIjoidE02QTEyTSJ9.rcnQJbgYd6phnLHY7dhWcA';
+        var geojson = [
+        {% for day in trip.day_set.all %}
+            {% for venue in day.venues.all %}
+                  {
+                    "type": "Feature",
+                    "geometry": {
+                      "type": "Point",
+                      "coordinates": [{{ venue.longitude }},{{ venue.latitude }}]
+                    },
+                      "properties": {
+                      "title": "{{ venue.name }}",
+                      "marker-color": "#3bb2d0",
+                      "marker-size": "large",
+                      "marker-symbol": {% if venue.is_food == True %} "fast-food" {% else %} "marker" {% endif %}
+                    }
+                  }
+                {% if forloop.last != True %}
+                    ,
+                {% endif %}
+            {% endfor %}
+            {% if forloop.last != True %}
+                ,
+            {% endif %}
+        {% endfor %}
+        ];
+        $.get("http://nominatim.openstreetmap.org/search?q="+"{{ trip.city }},{{ trip.country }}"+"&format=json", function(data){
+            for (i = 0; i < data.length; i++) {
+                if (data[i].type == "city") {
+                    cityLong = data[i].lon;
+                    cityLat = data[i].lat;
+                }
+            }
+        }).done(function(){
+            var map = L.mapbox.map('map', 'braintravel.lmbk3nld').setView([cityLat,cityLong], 15);
+            var myLayer = L.mapbox.featureLayer().setGeoJSON(geojson).addTo(map);
+        });
+    </script>
 {% endblock %}
