--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="{% static "css/home/stylish-portfolio.css" %}">
     <link rel='stylesheet' href="https://api.tiles.mapbox.com/mapbox.js/v2.1.6/mapbox.css" />
     <link rel="stylesheet" href="{% static "css/timeline.css" %}">
+    <link rel="stylesheet" href="{% static "css/sign-in.css" %}">
     <!-- Jquery -->
     <script src="{% static "js/jquery-1.11.0.min.js" %}"></script>
     <!-- Boostrap -->
