--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -1,65 +1,117 @@
 {% extends 'base.html' %}
 {% block title %} Sign in {% endblock %}
 {% block content %}
-<div class="row animated fadeInUp">
-{% if msg_errors %}
-	<div class="alert alert-danger" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        {% for msg_error in msg_errors %}
-            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-            <span class="sr-only">Error:</span>
-            {{ msg_error }}
-        {% endfor %}
-{% endif %}
-    </div>
-    <div class="col-lg-12">
-        <div class="login-container">
-            <div class="form-box-login">
-                <form id="siginForm" action="/signin/" method="post" role="form" data-toggle="validator">
-                	{% csrf_token %}
-                	<div class="form-group">
-	                    <input type="email" class="form-control" data-error="Email not valid!" placeholder="email" name="username" required />
-	                    <div class="help-block with-errors"></div>
+<div class="container">
+    <div class="omb_login">
+    	<h3 class="omb_authTitle">Login or <a href="#" data-toggle="modal" data-target="#registerModal">Sign up</a></h3>
+{#		<div class="row omb_row-sm-offset-3 omb_socialButtons">#}
+{#    	    <div class="col-xs-4 col-sm-2">#}
+{#		        <a href="#" class="btn btn-lg btn-block omb_btn-facebook">#}
+{#			        <i class="fa fa-facebook visible-xs"></i>#}
+{#			        <span class="hidden-xs">Facebook</span>#}
+{#		        </a>#}
+{#	        </div>#}
+{#        	<div class="col-xs-4 col-sm-2">#}
+{#		        <a href="#" class="btn btn-lg btn-block omb_btn-twitter">#}
+{#			        <i class="fa fa-twitter visible-xs"></i>#}
+{#			        <span class="hidden-xs">Twitter</span>#}
+{#		        </a>#}
+{#	        </div>#}
+{#        	<div class="col-xs-4 col-sm-2">#}
+{#		        <a href="#" class="btn btn-lg btn-block omb_btn-google">#}
+{#			        <i class="fa fa-google-plus visible-xs"></i>#}
+{#			        <span class="hidden-xs">Google+</span>#}
+{#		        </a>#}
+{#	        </div>#}
+{#		</div>#}
+{#		<div class="row omb_row-sm-offset-3 omb_loginOr">#}
+{#			<div class="col-xs-12 col-sm-6">#}
+{#				<hr class="omb_hrOr">#}
+{#				<span class="omb_spanOr">or</span>#}
+{#			</div>#}
+{#		</div>#}
+		<div class="row omb_row-sm-offset-3">
+			<div class="col-xs-12 col-sm-6">
+			    <form id="siginForm" class="omb_loginForm" action="/signin/" autocomplete="off" method="POST" role="form" data-toggle="validator">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-addon">
+                                <span class="fa fa-envelope"></span>
+                            </div>
+                            <input type="email" class="form-control" data-error="Invalid email address" placeholder="email address" name="username" required />
+                        </div>
+                        <span class="help-block with-errors"></span>
                     </div>
-                    <input type="password" placeholder="password" name="password">
-                    <button class="btn btn-info btn-block login" type="submit">Login</button>
-                    <hr/>
-                    <span>Don't have an account? <a href="#" data-toggle="modal" data-target="#registerModal">Create one now</a></span>
-                </form>
-            </div>
-        </div>
-    </div>
-    
+
+                    <div class="form-group">
+                        <div class="input-group">
+                            <div class="input-group-addon">
+                                <span class="glyphicon glyphicon-lock"></span>
+                            </div>
+                            <input  type="password" class="form-control" name="password" placeholder="Password" required>
+                        </div>
+                        <span class="help-block with-errors"></span>
+                    </div>
+
+					<button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+				</form>
+			</div>
+    	</div>
+{#		<div class="row omb_row-sm-offset-3" style="margin-top: 10px">#}
+{#			<div class="col-xs-6 col-sm-3">#}
+{#                    <input type="checkbox" value="remember-me" id="id_remember" name="remember">#}
+{#                    <label for="id_remember" class="control-label">Remember Me</label>#}
+{#			</div>#}
+{#			<div class="col-xs-6 col-sm-3 text-right">#}
+{#                <a href="#">Forgot password?</a>#}
+{#			</div>#}
+{#		</div>#}
+	</div>
+
     <div class="modal fade registrationForm" id="registerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Registration</h4>
+                    <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
                 </div>
-                <div class="modal-body">
-                    <form class="form-horizontal" action="/register_traveller/" id="traveller-registration" method="post" data-toggle="validator">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label for="name" class="col-sm-2 control-label">Name</label>
-                            <div class="col-sm-10">
-                              <input type="text" class="form-control" id="first_name" name="first_name" placeholder="Name">
+                <div class="modal-body row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-10">
+                        <form class="form-horizontal" action="/register_traveller/" id="traveller-registration" method="post" data-toggle="validator" role="form">
+                            {% csrf_token %}
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <div class="input-group-addon">
+                                        <span class="fa fa-user"></span>
+                                    </div>
+                                    <input  type="text" class="form-control" id="first_name" name="first_name" placeholder="Name" required />
+                                </div>
+                                <span class="help-block with-errors"></span>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="email" class="col-sm-2 control-label">Email</label>
-                            <div class="col-sm-10">
-                              <input type="email" class="form-control" data-error="Email not valid!" id="email" name="email" placeholder="Email">
+
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <div class="input-group-addon">
+                                        <span class="fa fa-envelope"></span>
+                                    </div>
+                                    <input type="email" id="email" name="username" class="form-control" data-error="Invalid email address" placeholder="email address" required />
+                                </div>
+                                <span class="help-block with-errors"></span>
                             </div>
-                            <span class="help-block with-errors"></span>
-                        </div>
-                        <div class="col-sm-offset-2 col-sm-10">
-                          <button type="submit" class="btn btn-default btn-lg btn-block" id="singUp-button">Sign up</button>
-                        </div>
-                        <div class="form-group">
-                        <p class="help-block center-block">Clicking on 'Sign Up' you accept the Conditions and confirms than you have read our Data Policy, including the Coockies Policy</p>
-                        </div>
-                    </form>
+
+                            <div class="form-group">
+                                <label><input type="checkbox" name="terms" required> I agree with the <a href="#">Terms and Conditions</a>.</label>
+                                <span class="help-block with-errors"></span>
+                            </div>
+
+                            <div class="form-group">
+                                <button type="submit" id="singUp-button" class="btn btn-lg btn-primary btn-block">Sign up</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-sm-1"></div>
                 </div>
             </div>
         </div>
